# authenticator

./: .gitignore  .gitmodules  CMakeLists.txt
src/: authenticator_main.c  password_file.c  password_file.h  user.c  user.h
